@@ -7,6 +7,7 @@ jboot v2.0-rc.4:
 新增：JFinalHandlers 添加 getHandlers() 和 setActionHandler() 方法
 新增：Columns 新增 or() 方法的支持，用于添加 Sql 的 OR 逻辑
 新增：新增工具类 WeightUtil 用于对默认 监听器进行排序
+新增：jboot.app.scanner 配置，用于对 jboot 类扫描器进行配置
 优化：save() 和 saveOrUpdate() 方法返回 Object，而不是 `<T> T`
 优化：增强 SPI 功能，当未在 META-INF 定义 Service 接口的时候，可以进行 SPI 发现
 优化：优化通过 Column 和 Columns 查询的时候，生成 Sql 的代码逻辑，增强性能
